--- a/BeEco.html
+++ b/BeEco.html
@@ -18,7 +18,7 @@
 	<div id="container">
 	
 		<div id="naglowek">
-			<img src="banner1.jpg" width=1170px height=200px>
+			<img src="banner1.jpg" width=100% height=40%>
 		</div>
 		
 		<div id="menu">
