--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ zegar();
 
 
 		
-		<div id="stopka">
+		<div id="stopka1">
 		<footer> &copy; Natalia Kwiatkowska, Aleksandra Płucienniczek, Alicja Zapor </footer>
 		</div>
 		
